# PatoBroker

./: CMakeLists.txt  README.md
include/: TradingSystem.h
include/api/: APIProvider.h  YahooFinanceAPI.h
include/gui/: GUIFramework.h
include/gui/qt/: QtFramework.h  SecurityLabels.h
include/security/: Security.h  SecurityContainer.h
src/: TradingSystem.cpp  main.cpp
src/api/: YahooFinance.cpp
src/gui/: QtFramework.cpp
src/security/: SecurityContainer.cpp
